@@ -1,3 +1,9 @@
+2002-07-15  Theodore Ts'o  <tytso@mit.edu>
+
+	* pwgen.c (main): Fix floating point exception errors if the
+		password is longer than terminal width.  Addresses Debian
+		bug #113571.
+
 2001-06-19  Theodore Tso  <tytso@valinux.com>
 
 	* Release of pwgen 2.01
